--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 /* Definition of the design system. All colors, gradients, fonts, etc should be defined here. 
 All colors MUST be HSL.
 */
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
 
 @layer base {
   :root {
