--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,15 @@
 All colors MUST be HSL.
 */
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 @layer base {
   :root {
     --background: 0 0% 98%;
