--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,14 @@
 .read-the-docs {
   color: #888;
 }
+
+@font-face {
+  font-family: "BlackOps";
+  src: url("/src/assets/fonts/BlackOps.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+.font-blackops {
+  font-family: "BlackOps", sans-serif;
+}
