--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
 
 @font-face {
   font-family: "BlackOps";
-  src: url("/src/assets/fonts/BlackOps.woff2") format("woff2");
+  src: url("/src/assets/fonts/BlackOpsOne-Regular.ttf") format("tff");
   font-weight: 400;
   font-style: normal;
 }
