--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -1,1 +1,10 @@
+@font-face {
+  font-family: "BlackOps";
+  src: url("/src/assets/fonts/BlackOpsOne-Regular.ttf") format("tff");
+  font-weight: 400;
+  font-style: normal;
+}
 
+.font-blackops {
+  font-family: "BlackOps", sans-serif;
+}
