--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "BlackOps";
-  src: url("/src/assets/fonts/BlackOpsOne-Regular.ttf") format("tff");
+  src: url("/src/assets/fonts/BlackOpsOne-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
